# TrashCounter

./: .editorconfig  .gitignore  .prettierrc.json  Cargo.toml  README.md  asset-manifest.json  flake.nix  index.html  manifest.json  package-lock.json  package.json  rust-toolchain.toml
.app/: package.json
.app/src/: index.jsx
.github/workflows/: codeql-analysis.yml
Doc/: README.md  roadmap.md
Doc/DataExchangeSchemata/: calendar.md  stats.md  trashList.md
app/: .gitignore  package-lock.json  package.json
app/public/: index.html
app/src/: index.css  index.js
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs  page.rs
logic/: Cargo.toml
scripts/: dev.sh  tailwind.sh
static/css/: 2.7d441899.chunk.css  2.7d441899.chunk.css.map  2.8f4532ec.chunk.css  2.8f4532ec.chunk.css.map  main.0cdc4ccd.chunk.css  main.0cdc4ccd.chunk.css.map  main.10dc3710.chunk.css  main.10dc3710.chunk.css.map  main.1fd222f8.chunk.css  main.1fd222f8.chunk.css.map  main.2d9c1d94.chunk.css  main.2d9c1d94.chunk.css.map  main.b2fb4354.chunk.css  main.b2fb4354.chunk.css.map  main.d153920c.chunk.css  main.d153920c.chunk.css.map  main.ebf00acc.chunk.css  main.ebf00acc.chunk.css.map  main.fb7f36f4.chunk.css  main.fb7f36f4.chunk.css.map
static/js/: 2.142456d9.chunk.js  2.142456d9.chunk.js.LICENSE.txt  2.142456d9.chunk.js.map  2.297e0fa4.chunk.js  2.297e0fa4.chunk.js.LICENSE.txt  2.297e0fa4.chunk.js.map  2.3fd82f1a.chunk.js  2.3fd82f1a.chunk.js.map  2.45ed5419.chunk.js  2.45ed5419.chunk.js.map  2.7833fb2d.chunk.js  2.7833fb2d.chunk.js.LICENSE.txt  2.78c5c4e5.chunk.js  (+68 more)
(+37 files in other folders)
